# advent-of-code-2016

./: .gitignore  Cargo.toml  aoc2016.opam  dune-project
d01/: d01.rs  dune
d04/: d04.rs
d05/: d05.rs
d06/: d06.rs
d07/: d07.rs
d08/: d08.rs
d10/: d10.rs
d11/: d11.rs
d12/: d12.rs
d13/: d13.rs
d14/: d14.rs  part1.csv  part1abc.csv  part2.csv  part2abc.csv
d15/: d15.rs
d16/: d16.rs
d17/: d17.rs
d18/: d18.rs
d19/: d19.rs
d20/: d20.rs
d21/: d21.rs
d22/: d22.rs
d23/: d23.rs  input.asm
d24/: d24.rs
dev-tools.locks/ocaml-lsp-server/: lock.dune
dune.lock/: lock.dune
src/: d02.rs  d03.rs  d04.rs  d05.rs  d07.rs  d08.rs  d09.rs  d10.rs  graph.rs  lib.rs
