[package]
name = "advent-of-code-2016"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "d01"
path = "d01/d01.rs"

[dependencies]
#anyhow = "1.0.100"
#indicatif = "0.18.3"
#itertools = "0.14.0"
#lazy_static = "1.5.0"
#md-5 = "0.10.6"
#nom = "8.0.0"
#regex = "1.12.2"
#serde = { version = "1.0.228", features = ["derive"] }
#serde_json = "1.0.145"
#serde_yaml = "0.9.33"
#strsim = { version = "0.11.1" }
#vecmath = "1.0.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
