[package]
name = "advent-of-code-2016"
version = "0.1.0"
edition = "2024"

[lib]
name = "aoc2016"
path = "src/lib.rs"

[[bin]]
name = "d01"
path = "src/d01.rs"

[[bin]]
name = "d02"
path = "src/d02.rs"

[[bin]]
name = "d03"
path = "src/d03.rs"

[[bin]]
name = "d04"
path = "src/d04.rs"

[[bin]]
name = "d05"
path = "src/d05.rs"

[[bin]]
name = "d06"
path = "src/d06.rs"

[[bin]]
name = "d07"
path = "src/d07.rs"

[[bin]]
name = "d08"
path = "src/d08.rs"

[[bin]]
name = "d09"
path = "src/d09.rs"

[[bin]]
name = "d10"
path = "src/d10.rs"

[dependencies]
#anyhow = "1.0.100"
#indicatif = "0.18.3"
itertools = "0.14.0"
lazy_static = "1.5.0"
md-5 = "0.10.6"
#nom = "8.0.0"
regex = "1.12.2"
#serde = { version = "1.0.228", features = ["derive"] }
#serde_json = "1.0.145"
#serde_yaml = "0.9.33"
#strsim = { version = "0.11.1" }
vecmath = "1.0.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
