(lang dune 3.20)

(name aoc2016)

(generate_opam_files true)

(source
 (github MixusMinimax/advent-of-code-2016))

(authors "Maxi <maxi.barmetler@gmail.com>")

(maintainers "Maxi <maxi.barmetler@gmail.com>")

(license MIT)

(documentation https://url/to/documentation)

(package
 (name aoc2016)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
